<resources>
    <string name="app_name">ToolBarApp</string>

    <string name="title_home">Дом</string>
    <string name="title_search">Поиск</string>
    <string name="title_profile">Профиль</string>
    <string name="title_workspace">Простор</string>
    <string name="title_rating">Рейтинг</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
