<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            app:startDestination="@+id/navigation_profile">

    <fragment
            android:id="@+id/navigation_home"
            android:name="com.example.toolbarapp.ui.home.HomeFragment"
            android:label="@string/title_home"
            tools:layout="@layout/fragment_home"/>

    <fragment
            android:id="@+id/navigation_search"
            android:name="com.example.toolbarapp.ui.search.SearchFragment"
            android:label="@string/title_search"
            tools:layout="@layout/fragment_search"/>

    <fragment
            android:id="@+id/navigation_profile"
            android:name="com.example.toolbarapp.ui.profile.ProfileFragment"
            android:label="@string/title_profile"
            tools:layout="@layout/fragment_profile"/>
    <fragment
            android:id="@+id/navigation_workspace"
            android:name="com.example.toolbarapp.ui.workspace.WorkspaceFragment"
            android:label="@string/title_workspace"
            tools:layout="@layout/fragment_workspace"/>

    <fragment
            android:id="@+id/navigation_rating"
            android:name="com.example.toolbarapp.ui.rating.RatingFragment"
            android:label="@string/title_rating"
            tools:layout="@layout/fragment_rating"/>
</navigation>
